--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
 
 
     <section class="mh-100vh d-flex justify-content-center align-items-start bg-dark">
-        <div class="container my-4">
-            <div class="row text-center flex-column align-items-center gap-4">
+        <div class="container my-auto py-5">
+            <div class="row text-center flex-column  align-items-center gap-5">
                 
                 <!-- Título -->
-                <div class="col-9">
+                <div class="col-9 col-sm-7 col-md-5 col-lg-4 align-self-center">
                     <p class="headline">Áreas de <span class="brilho-animated">atuação</span></p>
                 </div>
     
                 <!-- Grupo das 3 colunas -->
-                <div class="col-12 d-flex flex-column align-items-center gap-5">
+                <div class="col-12 d-flex flex-column flex-lg-row  justify-content-center gap-5 knowledge-container">
 
-                    <div class="d-flex flex-column col-11 knowledge-hover border-secondary rounded-custom py-3 gap-2">
+                    <div class="d-flex flex-column col-10 col-md-7 col-lg-3 knowledge-hover border-secondary rounded-custom py-3 gap-2">
                         <i class="bi-person icon"></i>
                         <h2 class="sub-headline knowledge-txt-bright">Civil e consumidor</h2>
                         <div class="col-12 text-start">
@@ -74,7 +74,7 @@
                         </div>
                     </div>
 
-                    <div class="d-flex flex-column col-11 knowledge-hover  border-secondary rounded-custom py-3 gap-2">
+                    <div class="d-flex flex-column col-10 col-md-7 col-lg-3 knowledge-hover  border-secondary rounded-custom py-3 gap-2">
                         <i class="bi-house icon"></i>
                         <h2 class="sub-headline knowledge-txt-bright">Familiar</h2>
                         <div class="col-12 text-start">
@@ -89,7 +89,7 @@
                         </div>
                     </div>
 
-                    <div class="d-flex flex-column col-11 knowledge-hover  border-secondary rounded-custom py-3 gap-2">
+                    <div class="d-flex flex-column col-10 col-md-7 col-lg-3 knowledge-hover  border-secondary rounded-custom py-3 gap-2">
                         <i class="bi-file-text icon"></i>
                         <h2 class="sub-headline knowledge-txt-bright">Comercial</h2>
                         <div class="col-12 text-start">
