adicionado: gsap com efeito dos container de experiencia.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <!-- Grupo das 3 colunas -->
                 <div class="col-12 d-flex flex-column flex-lg-row  justify-content-center gap-5 knowledge-container">
 
-                    <div class="d-flex flex-column col-10 col-md-7 col-lg-3 knowledge-hover border-secondary rounded-custom py-3 gap-2">
+                    <div class="d-flex flex-column col-10 col-md-7 col-lg-3 knowledge-hover border-secondary rounded-custom py-3 gap-2" id="k-1">
                         <i class="bi-person icon"></i>
                         <h2 class="sub-headline knowledge-txt-bright">Civil e consumidor</h2>
                         <div class="col-12 text-start">
@@ -76,10 +76,10 @@
                         </div>
                     </div>
 
-                    <div class="d-flex flex-column col-10 col-md-7 col-lg-3 knowledge-hover  border-secondary rounded-custom py-3 gap-2">
+                    <div class="d-flex flex-column col-10 col-md-7 col-lg-3 knowledge-hover  border-secondary rounded-custom py-3 gap-2" id="k-2">
                         <i class="bi-house icon"></i>
                         <h2 class="sub-headline knowledge-txt-bright">Familiar</h2>
-                        <div class="col-12 text-start">
+                        <div class="col-12 text-start" >
                             <ul class="col-11 gap-2">
                                 <li>Inventário e partilha</li>
                                 <li>Divórcio e dissolução de união estável e partilha de bens</li>
@@ -91,7 +91,7 @@
                         </div>
                     </div>
 
-                    <div class="d-flex flex-column col-10 col-md-7 col-lg-3 knowledge-hover  border-secondary rounded-custom py-3 gap-2">
+                    <div class="d-flex flex-column col-10 col-md-7 col-lg-3 knowledge-hover  border-secondary rounded-custom py-3 gap-2" id="k-3">
                         <i class="bi-file-text icon"></i>
                         <h2 class="sub-headline knowledge-txt-bright">Comercial</h2>
                         <div class="col-12 text-start">
@@ -163,6 +163,13 @@
 <!-- Script Bootstrap -->    
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" async defer></script>
 
+<!-- gsap -->
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js" async defer></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js" async defer></script>
+
+<!-- script -->
+<script src="src/js/script.js" async defer></script>
 
 </body>
 </html>
